# instagram_own_version

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: pylint.yml  testing.yml
comments/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_post.py  0003_comment_user.py  0004_comment_is_deleted.py
instagram_own_version/: asgi.py  dev.env  permissions.py  settings.py  urls.py  wsgi.py  yasg.py
likes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_like_post.py  0003_initial.py  0004_auto_20220223_1106.py  0005_auto_20220223_1539.py  0006_likedislike.py
main/: models.py
main/migrations/: 0001_initial.py
posts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_user.py  0003_alter_post_photo.py  0004_post_is_deleted.py
users/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_profile_photo.py
