[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["marinaRomanchuk <marina.romanchuk23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.2.11"
pre-commit = "^2.17.0"
psycopg2 = "^2.9.3"
isort = "^5.10.1"
pylama = "^8.3.7"
black = "^21.12b0"
mypy = "^0.931"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
